--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,8 +1,14 @@
 hcc:
 	ruby hcc.rb > hcc.html
 
-install: hcc
+install-hcc: hcc
 	mv hcc.html 1731* ../public
+
+# kyutech:
+# 	ruby kyutech.rb > kyutech.html
+
+# intall-kyutech: kyutech
+# mv kyutech.html 1710* 1610* ../public
 
 clean:
 	${RM} -rf 1731* hcc.html
