update form tmac2

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -4,6 +4,12 @@ hcc:
 install-hcc: hcc
 	mv hcc.html 1731* ../public
 
+smnsk:
+	ruby smnsk.rb > smnsk.html
+
+install-smnsk: smnsk
+	mv smnsk.html 15* 16* ../public
+
 # kyutech:
 # 	ruby kyutech.rb > kyutech.html
 
@@ -12,3 +18,4 @@ install-hcc: hcc
 
 clean:
 	${RM} -rf 1731* hcc.html
+	${RM} -rf 15* 16* smnsk.html
